--- a/vehiculos/templates/paginas/payment_rapi.html
+++ b/vehiculos/templates/paginas/payment_rapi.html
@@ -1,12 +1,133 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>DS Travel - Detalles del pago</title>
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@500&display=swap" rel="stylesheet">
+        <script src="https://sdk.mercadopago.com/js/v2"></script>
+    </head>
 <body>
-    
+    <!-- NAVBAR -->
+    <nav class="navbar">
+        <div class="content-left">
+            <a href="/">Inicio</a>
+            <a href="/acerca">Vuelos</a>
+            <a href="/acerca">Alojamientos</a>
+            <a href="/acerca">Paquetes</a>
+        </div>
+        <div class="content-right">
+            <a class="login" href="/login">Iniciar Sesion</a>
+            <a class="register" href="/register">Registrarse</a>
+        </div>
+    </nav>
+    <!-- DETALLES -->
+    <p class="messageDetailFromPayment">Podras encontrar este detalle de pago junto al comprobante, en tu perfil en la pestaña de compras. ( Perfil > Compras )</p>
+    <div class="detailsFinal">
+        <h2 class="titleDetailsFinal">Detalles del pago</h2>
+        <p>Aqui encontraras mas informacion sobre la compra de tu {{ description }}</p>
+        <div class="urLDivPayment">
+            <a href="{{ url }}" class="urlToGoPaymentEfectivo">Ver mas informacion sobre el pago</a>
+        </div>
+    </div>
+    <div class="paymentStatus" id="efectivoStatus">
+        <div class="cuadroFinalDiv" id="{{ status }}">
+            <div class="imgFromFinal">
+                <div>
+                    {% if status == "pending" %}
+                    <i class="fa-solid fa-clock fa-2xl"></i>
+                    {% endif %}
+                    {% if status == "approved" %}
+                    <i class="fa-regular fa-circle-check"></i>
+                    {% endif %}
+                </div>
+            </div>
+            <div id="paymentFinalDivStatus">
+                <label class="labelPayment">ESTADO DEL PAGO:</label>
+                <div>
+                    {% if status == "pending" %}
+                    <p class="labelPayment" id="labelStatus">PAGO PENDIENTE</p>
+                    {% endif %}
+                    {% if status == "approved" %}
+                    <p class="labelPayment" id="labelStatus">PAGO ACEPTADO</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="detailsPaymentFinal">
+        <div class="cuadrosPaymentFinalResult">
+            <div class="cuadroFinal">
+                <!-- METODO DE PAGO -->
+                <div class="cuadroFinalDiv">
+                    <div class="imgFromFinal">
+                        {% if payment_method == "rapipago" %}
+                        <img src="https://scontent.faep9-1.fna.fbcdn.net/v/t39.30808-6/257629257_4782745145083343_6539132762814886168_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeE3vinPX32Qo5W7NynuNpMdQZ45PAf676ZBnjk8B_rvpkBBP4wZOx2UhHdU_BQuIRHacC8gsQHw2ARYnL4TjPjj&_nc_ohc=yZIus3Mm7s8AX-XM-xu&_nc_ht=scontent.faep9-1.fna&oh=00_AfBRrKlVpkLMBpbHZyl1Ay0PKz7oTzU5UVkSH7riXZkmyw&oe=63FAE22F" alt="" class="" />
+                        {% endif %}
+                        {% if payment_method == "pagofacil" %}
+                        <img src="https://scontent.faep9-2.fna.fbcdn.net/v/t39.30808-6/326395083_726026508878154_4007094623276795410_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeFs8f3LV5N2z1c9li7oCN2qs83dquTdpOezzd2q5N2k52iFHIVMLKqjz5TWJBOwVYv3gfPNonvksNX8XwfV66zC&_nc_ohc=8veQJHWDq6IAX_pof_S&_nc_ht=scontent.faep9-2.fna&oh=00_AfBBMuLOhMUVwG18oZ8mHPMsQsiLpl5VrMCQ1GNXnf3BzA&oe=63FC2C16" alt="" class="" />
+                        {% endif %}
+                    </div>
+                    <div class="textPaymentChoosen">
+                        <label class="labelPayment">METODO DE PAGO UTILIZADO:</label>
+                        {% if payment_method == "rapipago" %}
+                        <p class="labelPayment">Efectivo: RapiPago</p>
+                        {% endif %}
+                        {% if payment_method == "pagofacil" %}
+                        <p class="labelPayment">Efectivo: PagoFacil</p>
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- DETALLE DEL PRECIO -->
+                <div class="cuadroFinalDiv">
+                    <div class="textPaymentChoosenDiv">
+                        <label class="labelPayment">PRECIO DE LA COMPRA:</label>
+                        <p>${{ price }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- FOOTER -->
+    <div class="footer">
+        <div class="socialInformation">
+            <h1>DS Travel</h1>
+            <p>Siguenos en nuestras redes y enterate de mucho mas.</p>
+            <div class="socialMediaInformation">
+                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="iconoSocialFooter"></i></a>
+                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="iconoSocialFooter"></i></a>
+            </div>
+        </div>
+        <div class="formalInformation">
+            <div class="firstColumnFormalInfo">
+                <h3>Express</h3>
+                <a>Acerca de nosotros</a>
+                <a>Planes</a>
+                <a>Ofertas</a>
+                <a>Politica de Privacidad</a>
+            </div>
+            <div class="secondColumnFormalInfo">
+                <h3>Contacto</h3>
+                <a>Ayuda</a>
+                <a>FAQ</a>
+                <a>Afiliados</a>
+            </div>
+            <div class="thirdColumnFormalInfo">
+                <h3>Mas</h3>
+                <a>Control</a>
+                <a>Nuestro Blog</a>
+                <a>Tips</a>
+            </div>
+        </div>
+    </div>
+    <!-- SCRIPTS -->
+    <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
+    <script src={% static 'js/home.js' %} crossorigin="anonymous"></script> 
 </body>
 </html>
