--- a/vehiculos/templates/paginas/login.html
+++ b/vehiculos/templates/paginas/login.html
@@ -14,28 +14,18 @@
 <body>
     <!-- RECORDAR QUE ESTO ES UNA TEMPLATE NO LA PAGINA COMPLETA -->
     <!-- NAVBAR -->
-    <nav class="navbar">
-        <div class="content-left">
-            <a href="/">Inicio</a>
-            <a href="/acerca">Vuelos</a>
-            <a href="/acerca">Alojamientos</a>
-            <a href="/acerca">Paquetes</a>
-        </div>
-        <div class="content-right">
-            <a class="login" href="/login">Iniciar Sesion</a>
-            <a class="register" href="/register">Registrarse</a>
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
     <!-- LOGIN -->
     <div class="formularioLogin">
         <div class="formLoginAndDatos">
             <h1 class="titleFormLogin">Iniciar Sesion</h1>
-            <form class="loginForm">
+            <form class="loginForm" action="/login" method="POST">
+                {% csrf_token %}
                 <div class="datos">
                     <label>Correo Electronico:</label>
-                    <input type="text" placeholder="ejemplo@hotmail.com" required>
+                    <input type="text" placeholder="ejemplo@hotmail.com" name="email" required>
                     <label>Contraseña:</label>
-                    <input type="password" placeholder="" required> 
+                    <input type="password" placeholder="" name="password" required> 
                     <p class="lostPasswordText">Olvidaste tu contraseña? <strong><a class="link">Recuperala aqui.</a></strong></p>
                     <button class="submit">Continuar</button>
                     <h3 class="anotherLogin">Iniciar sesion con:</h3>
@@ -62,38 +52,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <div class="footer">
-        <div class="socialInformation">
-            <h1>DS Travel</h1>
-            <p>Siguenos en nuestras redes y enterate de mucho mas.</p>
-            <div class="socialMediaInformation">
-                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="iconoSocialFooter"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="iconoSocialFooter"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="iconoSocialFooter"></i></a>
-            </div>
-        </div>
-        <div class="formalInformation">
-            <div class="firstColumnFormalInfo">
-                <h3>Express</h3>
-                <a>Acerca de nosotros</a>
-                <a>Planes</a>
-                <a>Ofertas</a>
-                <a>Politica de Privacidad</a>
-            </div>
-            <div class="secondColumnFormalInfo">
-                <h3>Contacto</h3>
-                <a>Ayuda</a>
-                <a>FAQ</a>
-                <a>Afiliados</a>
-            </div>
-            <div class="thirdColumnFormalInfo">
-                <h3>Mas</h3>
-                <a>Control</a>
-                <a>Nuestro Blog</a>
-                <a>Tips</a>
-            </div>
-        </div>
-    </div>
+    {% include 'footer.html' %}
     <!-- FONT AWESOME: importa iconos -->
     <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
 </body>
