--- a/vehiculos/templates/paginas/payment_rapi.html
+++ b/vehiculos/templates/paginas/payment_rapi.html
@@ -14,18 +14,7 @@
     </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar">
-        <div class="content-left">
-            <a href="/">Inicio</a>
-            <a href="/acerca">Vuelos</a>
-            <a href="/acerca">Alojamientos</a>
-            <a href="/acerca">Paquetes</a>
-        </div>
-        <div class="content-right">
-            <a class="login" href="/login">Iniciar Sesion</a>
-            <a class="register" href="/register">Registrarse</a>
-        </div>
-    </nav>
+    {% include 'navbar.html' %}
     <!-- DETALLES -->
     <p class="messageDetailFromPayment">Podras encontrar este detalle de pago junto al comprobante, en tu perfil en la pestaña de compras. ( Perfil > Compras )</p>
     <div class="detailsFinal">
@@ -94,38 +83,7 @@
         </div>
     </div>
     <!-- FOOTER -->
-    <div class="footer">
-        <div class="socialInformation">
-            <h1>DS Travel</h1>
-            <p>Siguenos en nuestras redes y enterate de mucho mas.</p>
-            <div class="socialMediaInformation">
-                <a class="linkSocial"><i class="fa-brands fa-facebook fa-xl" id="iconoSocialFooter"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-instagram fa-xl" id="iconoSocialFooter"></i></a>
-                <a class="linkSocial"><i class="fa-brands fa-twitter fa-xl" id="iconoSocialFooter"></i></a>
-            </div>
-        </div>
-        <div class="formalInformation">
-            <div class="firstColumnFormalInfo">
-                <h3>Express</h3>
-                <a>Acerca de nosotros</a>
-                <a>Planes</a>
-                <a>Ofertas</a>
-                <a>Politica de Privacidad</a>
-            </div>
-            <div class="secondColumnFormalInfo">
-                <h3>Contacto</h3>
-                <a>Ayuda</a>
-                <a>FAQ</a>
-                <a>Afiliados</a>
-            </div>
-            <div class="thirdColumnFormalInfo">
-                <h3>Mas</h3>
-                <a>Control</a>
-                <a>Nuestro Blog</a>
-                <a>Tips</a>
-            </div>
-        </div>
-    </div>
+    {% include 'footer.html' %}
     <!-- SCRIPTS -->
     <script src="https://kit.fontawesome.com/e80c9c3cc8.js" crossorigin="anonymous"></script>
     <script src={% static 'js/home.js' %} crossorigin="anonymous"></script> 
